--- a/package.json
+++ b/package.json
@@ -1,26 +1,52 @@
 {
-  "name": "mes-system",
-  "version": "1.0.0",
-  "description": "MES System",
-  "main": "index.js",
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "start": "nodemon index.js",
+    "dev": "vue-cli-service serve"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.10.1",
-    "pg": "^8.13.1",
-    "redis": "^4.7.0",
-    "sequelize": "^6.37.5",
-    "socket.io": "^4.8.1"
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "core-js": "^3.8.3",
+    "socket.io-client": "^4.8.1",
+    "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
-    "concurrently": "^9.1.2",
-    "nodemon": "^3.1.9"
-  }
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^5.0.8",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
